# agentmetry

./: .cursorignore  .env.example  .gitignore  .gitleaks.toml  CCLA.md  CHANGELOG.md  CLA.md  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  TRADEMARK.md  docker-compose.loki.yml  docker-compose.yml
apps/orchestrator/: .env.agentaudit-demo  .env.agentaudit-ollama  .env.agentmetry-demo  .env.agentmetry-ollama  .env.example  Dockerfile  pyproject.toml
apps/orchestrator/api/: main.py  websocket.py  ws_bridge.py
apps/orchestrator/api/routes/: audit.py  drivers.py  events.py  ingress.py  runs.py  skills.py  vault.py
apps/orchestrator/cli/: __init__.py  __main__.py
apps/orchestrator/core/: auth.py  config.py  extensions.py  health.py
apps/orchestrator/core/audit/: __init__.py  alerts.py  canonical.py  evidence_pack.py  external.py  hashing.py  hook_bootstrap.py  ingest.py  migrate.py  (+8 more)
apps/orchestrator/scripts/: lint_skills.py
apps/orchestrator/tests/: conftest.py  test_agent_audit.py  test_agentaudit_ingest_client.py  test_agentmetry_audit.py  test_agentmetry_ingest_client.py  test_approval_flow.py  test_audit_demo_v11.py  test_audit_sinks.py  test_audit_stats.py  test_audit_tail.py  test_auth.py  test_budget.py  test_channel_router.py  test_checkpoint_resume.py  test_chinese_agent_hooks.py  test_chinese_agent_sprint_b.py  test_chinese_agent_sprint_c.py  test_cli_backup.py  test_crewai_adapter.py  test_detection_adi.py  test_detection_default_config.py  test_detection_emit_durability.py  test_detection_engine.py  test_detection_hf_incident.py  test_detection_rules_v2.py  test_dlp_agent_env_override.py  test_dlp_invisible_unicode.py  test_dlp_markdown_exfil.py  test_dlp_scanner.py  test_docs_driver.py  test_doctor.py  test_driver_paths.py  test_drivers.py  test_email_reply_graph.py  test_embedding_cache.py  test_event_bus.py  test_evidence_export.py  test_extensions.py  test_external_ingest.py  test_flywheel_capture.py  (+46 more)
apps/orchestrator/tools/: docs_server.py  gmail_server.py  margin_server.py  mcp_audit_proxy.py  search_server.py  vault_fs_server.py
(+323 files in other folders)
