[project]
name = "agentmetry-orchestrator"
version = "0.2.0"
description = "Agentmetry — SIEM flight recorder for AI agent tool-use"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0",
    "httpx>=0.28.0",
    "websockets>=14.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "mcp>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8"]

[project.scripts]
agentmetry = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "api", "cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
